--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
   --yellow: #f7f500;
   --text-shadow: rgb(0, 208, 255);
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap');
 
 body {
   display: flex;
@@ -65,15 +65,14 @@ video {
   z-index: -1; 
 }
 
-/* Overlay styles */
 .video-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Black overlay with 50% opacity */
-  z-index: 0; /* Overlay sits above the video but below everything else */
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 0; 
 }
 .content-conatiner {
   position: relative;
@@ -235,14 +234,166 @@ a.cyberpunk2077:focus {
     flex-direction: column;
     padding: 30px;
   }
-  
-  body * {
-    font-family: "Advent Pro", arial ;
+
+  @font-face 
+{
+    font-family:BlenderProBook;
+    font-style:normal;
+    font-weight:400;
+    src:url(fonts/BlenderProBook.woff2) format("woff2");
+}
+
+@font-face 
+{
+    font-family: Oxanium;
+    font-style: normal;
+    font-weight: 400;
+    src: url(fonts/Oxanium.woff2) format('woff2');
+}
+
+@font-face 
+{
+    font-family: Cyberpunk;
+    src: url(fonts/Cyberpunk.otf) format('opentype');
+}
+
+/*trying to solve header*/
+
+
+
+h1.cyberpunk-glitched-header{
+  font-size: 3.1rem;
+  line-height: 2.2rem;
+  font-weight: 200; 
+  position: relative;
+  padding-bottom: 15px;
+  font-family: Cyberpunk;
+  color: var(--yellow-color);
+  cursor: pointer;
+}
+h1.cyberpunk-glitched-header:before{
+  content: "";
+      display: block;
+      position: absolute;
+      bottom: -10px;
+      left: 2px;
+      width: 100%;
+      height: 10px;
+      background-color:var(--Red-shade-bright);
+      clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 100% 6px, 85px 6px, 80px 10px, 0px 10px);     
+}
+h1.cyberpunk-glitched-header {
+  animation-name: h1headerglitched;
+  animation-duration: calc(var(--glitched-duration) * 1.4);
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes h1headerglitched {
+  0% {
+    transform: skew(-20deg);
+    left: -4px;
   }
+  10% {
+    transform: skew(-20deg);
+    left: -4px;
+  }
+  11% {
+    transform: skew(0deg);
+    left: 2px;
+  }
+  50% {
+    transform: skew(0deg);
+  }
+  51% {
+    transform: skew(10deg);
+  }
+  59% {
+    transform: skew(10deg);
+  }
+  60% {
+    transform: skew(0deg);
+  }
+  100% {
+    transform: skew(0deg);
+  }
+}
+
+h1.cyberpunk-glitched-header:before {
+  animation-name: h1headerbeforeglitched;
+  animation-duration: calc(var(--glitched-duration) * 2);
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes h1headerbeforeglitched {
+  0% {
+    transform: skew(-20deg);
+    left: -4px;
+    clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 100% 6px, 85px 6px, 80px 10px, 0px 10px);
+  }
+  10% {
+    transform: skew(-20deg);
+    left: -4px;
+    clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 100% 6px, 85px 6px, 80px 10px, 0px 10px);
+  }
+  11% {
+    transform: skew(0deg);
+    left: 2px;
+    clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 100% 6px, 85px 6px, 80px 10px, 0px 10px);
+  }
+  50% {
+    transform: skew(0deg);
+    clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 100% 6px, 85px 6px, 80px 10px, 0px 10px);
+  }
+  51% {
+    transform: skew(0deg);
+    clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 40% 5px, calc(40% - 30px) 0px, calc(40% + 30px) 0px, calc(45% - 15px) 5px, 100% 5px, 100% 6px, calc(45% - 14px) 6px, calc(40% + 29px) 1px, calc(40% - 29px) 1px, calc(40% + 1px) 6px, 85px 6px, 80px 10px, 0px 10px);
+  }
+  59% {
+    transform: skew(0deg);
+    clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 40% 5px, calc(40% - 30px) 0px, calc(40% + 30px) 0px, calc(45% - 15px) 5px, 100% 5px, 100% 6px, calc(45% - 14px) 6px, calc(40% + 29px) 1px, calc(40% - 29px) 1px, calc(40% + 1px) 6px, 85px 6px, 80px 10px, 0px 10px);
+  }
+  60% {
+    transform: skew(0deg);
+    clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 100% 6px, 85px 6px, 80px 10px, 0px 10px);
+  }
+  100% {
+    transform: skew(0deg);
+    clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 100% 6px, 85px 6px, 80px 10px, 0px 10px);
+  }
+}
+  h1.cyberpunk-glitched-header:after{
+    content: "_ _";
+    animation-name: hxafter;
+    animation-duration: var(--glitched-duration);
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+.amit{
+    font-size: 2.8rem;
+    line-height: 2.2rem;
+    font-weight: 200; 
+    position: relative;
+    padding-bottom: 15px;
+    font-family: Cyberpunk;
+    color:violet;
+}
+
+
+  /***************/
+  
   
   /* Titles */
-  
-  h1.cyberpunk,
+  h1.cyberpunk {
+    font-size: 2.8rem;
+    line-height: 2.2rem;
+    font-weight: 200; 
+    position: relative;
+    padding-bottom: 15px;
+    font-family: Oxanium;
+}
+
   h2.cyberpunk,
   h3.cyberpunk,
   h4.cyberpunk {
@@ -251,6 +402,7 @@ a.cyberpunk2077:focus {
     font-weight: 200;
     position: relative;
     padding-bottom: 15px;
+    font-family: 'Orbitron', sans-serif;
   }
   h1.cyberpunk{
     color: var(--Red-shade-bright);
@@ -290,6 +442,7 @@ a.cyberpunk2077:focus {
       height: 10px;
       background-color: white;
       clip-path: polygon(0px 0px, 85px 0px, 90px 5px, 100% 5px, 100% 6px, 85px 6px, 80px 10px, 0px 10px);
+      
   }
   h1{
     color:var(--yellow-color) ;
@@ -301,6 +454,7 @@ a.cyberpunk2077:focus {
     animation-duration: calc(var(--glitched-duration) * 1.4);
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+    
   }
   
   h2.cyberpunk.glitched {
@@ -650,12 +804,12 @@ a.cyberpunk2077:focus {
     display: block;
     border: none;
     border-radius: 0%;
-    font-size: 1.2rem; /* Adjust the font size as needed */
-    line-height: 1.2rem; /* Adjust the line height as needed */
+    font-size: 1.2rem; 
+    line-height: 1.2rem; 
     letter-spacing: 2px;
     text-transform: uppercase;
     font-weight: 600;
-    padding: 20px 50px; /* Adjust padding to make it smaller */
+    padding: 20px 50px;
     margin: 10px;
     position: relative;
     color: #fff;
@@ -704,12 +858,12 @@ button#clear_input_btn {
     display: block;
     border: none;
     border-radius: 0%;
-    font-size: 1.2rem; /* Adjust the font size as needed */
-    line-height: 1.2rem; /* Adjust the line height as needed */
+    font-size: 1.2rem; 
+    line-height: 1.2rem; 
     letter-spacing: 2px;
     text-transform: uppercase;
     font-weight: 600;
-    padding: 20px 50px; /* Adjust padding to make it smaller */
+    padding: 20px 50px; 
     margin: 10px;
     position: relative;
     color: #fff;
@@ -746,9 +900,9 @@ body * {
 /* Form fields */
 #editor-container,
 #output-container {
-    width: 100%; /* Responsive width for mobile devices */
-    max-width: 1300px; /* Limit max width */
-    height: 400px; /* Static height might be adjusted in media queries */
+    width: 100%; 
+    max-width: 1300px; 
+    height: 400px; 
     border: 30px solid #000;
     border-left: 5px solid #000;
     border-right: 5px solid #000;
@@ -892,7 +1046,7 @@ button.cyberpunk2077:before, a.cyberpunk2077:before {
         height: auto;
     }
     button.cyberpunk2077, a.cyberpunk2077 {
-        padding: 25px 50px; /* Adjust padding for smaller buttons */
+        padding: 25px 50px; 
     }
 }
 footer {
@@ -906,10 +1060,10 @@ footer {
   box-sizing: border-box;
 }
 .content-container {
-  min-height: calc(100vh - 100px); /* Adjust the value as needed */
+  min-height: calc(100vh - 100px); 
   flex: 1 0 auto;
   padding-bottom: 100px; 
-  flex-direction: column;/* Adjust the value as needed */
+  flex-direction: column;
 }
 
 :root {
@@ -985,3 +1139,5 @@ footer {
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--yellow-color); 
 }
+
+
