--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ a.cyberpunk2077.blue {
 
 button.cyberpunk2077:after,
 a.cyberpunk2077:after {
-  content: "21BCA1067";
+  content: "A9X7Q3P2M";
   display: block;
   position: absolute;
   bottom: 0px;
@@ -1063,7 +1063,7 @@ button.cyberpunk2077, a.cyberpunk2077 {
 }
 
 button.cyberpunk2077:after, a.cyberpunk2077:after {
-    content: "21BCA1067";
+    content: "A9X7Q3P2M";
     display: block;
     position: absolute;
     bottom: 0px;
