--- a/css/index.css
+++ b/css/index.css
@@ -257,7 +257,7 @@ h1.cyberpunk-glitched-header {
   }
 }
 
-.amit{
+.name{
     font-size: 2.8rem;
     line-height: 2.2rem;
     font-weight: 200; 
