--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ h1.cyberpunk-glitched-header:before {
     animation-iteration-count: infinite;
     animation-timing-function: linear;
   }
-.amit{
+.name{
     font-size: 2.8rem;
     line-height: 2.2rem;
     font-weight: 200; 
